# co2-collector

./: README.md  pyproject.toml
co2_collector/: __main__.py  cli.py  device.py
tests/: test_co2_notifier.py
