[tool.poetry]
name = "co2_collector"
version = "0.1.0"
description = ""
authors = ["danpeeei <kuro.dogbear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mh-z19 = "^3.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
